project all settings --fixed